# app/Models/Submission.php
@@ -7,14 +7,11 @@ use Illuminate\Database\Eloquent\Model;
 class Submission extends Model
 {
     protected $fillable = [
-        'listing_id', 'user_id', 'option_id', 'amount',
+        'listing_id', 'user_id', 'amount',
         'submission_date', 'status', 'min_soom'
     ];
 
-    public function option()
-    {
-        return $this->belongsTo(SubmissionOption::class, 'option_id');
-    }
+
 
     public function user()
     {
@@ -29,6 +26,23 @@ class Submission extends Model
     public function negotiations()
     {
         return $this->hasMany(SoomNegotiation::class);
+    }
+
+    public function listing()
+    {
+        return $this->belongsTo(Listing::class);
+    }
+    public function scopePending($query)
+    {
+        return $query->where('status', 'pending');
+    }
+    public function scopeAccepted($query)
+    {
+        return $query->where('status', 'accepted');
+    }
+    public function scopeRejected($query)
+    {
+        return $query->where('status', 'rejected');
     }
 }
 
